# cie-certificate-and-ucas-info-exact

./: .gitignore  README.md  gui.py  main.py  package_macos.sh  package_windows_placeholder.bat  parse_cie_certificate.py  parse_cie_statement.py  parse_predicted_grade_statement.py  parse_ucas_statement.py  pyproject.toml  xlsx_utils.py
