[project]
name = "cie-statement-and-ucas-info-exact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.8.0",
    "pyinstaller>=6.19.0",
    "pymupdf>=1.26.7",
    "typing-extensions>=4.15.0",
    "xlsxwriter>=3.2.9",
]
